@@ -27,11 +27,7 @@
  * @run testng TestSpliterator
  */
 
-import java.lang.foreign.Arena;
-import java.lang.foreign.MemoryLayout;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
-import java.lang.foreign.SequenceLayout;
+import java.lang.foreign.*;
 
 import java.lang.invoke.VarHandle;
 import java.util.LinkedList;
@@ -41,8 +37,6 @@ import java.util.concurrent.CountedCompleter;
 import java.util.concurrent.RecursiveTask;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.LongStream;
-
-import java.lang.foreign.ValueLayout;
 
 import org.testng.annotations.*;
 
@@ -59,8 +53,8 @@ public class TestSpliterator {
         SequenceLayout layout = MemoryLayout.sequenceLayout(size, ValueLayout.JAVA_INT);
 
         //setup
-        try (Arena arena = Arena.openShared()) {
-            MemorySegment segment = MemorySegment.allocateNative(layout, arena.scope());;
+        try (Arena arena = Arena.ofShared()) {
+            MemorySegment segment = arena.allocate(layout);;
             for (int i = 0; i < layout.elementCount(); i++) {
                 INT_HANDLE.set(segment, (long) i, i);
             }
@@ -86,7 +80,8 @@ public class TestSpliterator {
         SequenceLayout layout = MemoryLayout.sequenceLayout(1024, ValueLayout.JAVA_INT);
 
         //setup
-        MemorySegment segment = MemorySegment.allocateNative(layout, SegmentScope.auto());
+        Arena scope = Arena.ofAuto();
+        MemorySegment segment = scope.allocate(layout);
         for (int i = 0; i < layout.elementCount(); i++) {
             INT_HANDLE.set(segment, (long) i, i);
         }
@@ -101,55 +96,64 @@ public class TestSpliterator {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadSpliteratorElementSizeTooBig() {
-        MemorySegment.allocateNative(2, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(2, 1)
                 .spliterator(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadStreamElementSizeTooBig() {
-        MemorySegment.allocateNative(2, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(2, 1)
                 .elements(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadSpliteratorElementSizeNotMultiple() {
-        MemorySegment.allocateNative(7, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(7, 1)
                 .spliterator(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadStreamElementSizeNotMultiple() {
-        MemorySegment.allocateNative(7, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(7, 1)
                 .elements(ValueLayout.JAVA_INT);
     }
 
     @Test
     public void testSpliteratorElementSizeMultipleButNotPowerOfTwo() {
-        MemorySegment.allocateNative(12, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(12, 1)
                 .spliterator(ValueLayout.JAVA_INT);
     }
 
     @Test
     public void testStreamElementSizeMultipleButNotPowerOfTwo() {
-        MemorySegment.allocateNative(12, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(12, 1)
                 .elements(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadSpliteratorElementSizeZero() {
-        MemorySegment.allocateNative(7, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(7, 1)
                 .spliterator(MemoryLayout.sequenceLayout(0, ValueLayout.JAVA_INT));
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadStreamElementSizeZero() {
-        MemorySegment.allocateNative(7, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(7, 1)
                 .elements(MemoryLayout.sequenceLayout(0, ValueLayout.JAVA_INT));
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testHyperAligned() {
-        MemorySegment segment = MemorySegment.allocateNative(8, SegmentScope.auto());
+        Arena scope = Arena.ofAuto();
+        MemorySegment segment = scope.allocate(8, 1);
         // compute an alignment constraint (in bytes) which exceed that of the native segment
         long bigByteAlign = Long.lowestOneBit(segment.address()) << 1;
         segment.elements(MemoryLayout.sequenceLayout(2, ValueLayout.JAVA_INT.withBitAlignment(bigByteAlign * 8)));
