@@ -24,7 +24,6 @@
 import java.io.IOException;
 import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.nio.ByteBuffer;
 import java.util.Arrays;
 import java.util.Random;
@@ -68,15 +67,15 @@ public class AbstractChannelsTest {
 
     static final Random RANDOM = RandomFactory.getRandom();
 
-    static ByteBuffer segmentBufferOfSize(SegmentScope session, int size) {
-        var segment = MemorySegment.allocateNative(size, 1, session);
+    static ByteBuffer segmentBufferOfSize(Arena session, int size) {
+        var segment = session.allocate(size, 1);
         for (int i = 0; i < size; i++) {
             segment.set(JAVA_BYTE, i, ((byte)RANDOM.nextInt()));
         }
         return segment.asByteBuffer();
     }
 
-    static ByteBuffer[] segmentBuffersOfSize(int len, SegmentScope session, int size) {
+    static ByteBuffer[] segmentBuffersOfSize(int len, Arena session, int size) {
         ByteBuffer[] bufs = new ByteBuffer[len];
         for (int i = 0; i < len; i++)
             bufs[i] = segmentBufferOfSize(session, size);
@@ -88,7 +87,7 @@ public class AbstractChannelsTest {
      * where heap can be from the global session or session-less, and direct are
      * associated with the given session.
      */
-    static ByteBuffer[] mixedBuffersOfSize(int len, SegmentScope session, int size) {
+    static ByteBuffer[] mixedBuffersOfSize(int len, Arena session, int size) {
         ByteBuffer[] bufs;
         boolean atLeastOneSessionBuffer = false;
         do {
@@ -153,9 +152,9 @@ public class AbstractChannelsTest {
     static class ArenaSupplier implements Supplier<Arena> {
 
         static final Supplier<Arena> NEW_CONFINED =
-                new ArenaSupplier(Arena::openConfined, "confined arena");
+                new ArenaSupplier(Arena::ofConfined, "confined arena");
         static final Supplier<Arena> NEW_SHARED =
-                new ArenaSupplier(Arena::openShared, "shared arena");
+                new ArenaSupplier(Arena::ofShared, "shared arena");
 
         private final Supplier<Arena> supplier;
         private final String str;
