@@ -24,7 +24,7 @@
 package org.openjdk.foreigntest;
 
 import java.lang.foreign.*;
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 
 public class PanamaMainDirect {
     public static void main(String[] args) {
@@ -40,7 +40,7 @@ public class PanamaMainDirect {
 
     public static void testDirectAccessMemorySegment() {
         System.out.println("Trying to get MemorySegment");
-        MemorySegment.ofAddress(0, 4000, SegmentScope.global());
+        MemorySegment.NULL.reinterpret(10);
         System.out.println("Got MemorySegment");
    }
 }
